# cfim-llm-study

./: .env.example  .gitignore  README.md  ablation_output.txt  pyproject.toml  requirements-lock.txt  requirements.txt  research_blueprint_v6.md  user_cost.json
.gsd/: DECISIONS.md  PROJECT.md  QUEUE.md  REQUIREMENTS.md  SIMULATION_DESIGN.md  STATE.md  completed-units.json  metrics.json
.gsd/activity/: 001-gsd-init.jsonl
.gsd/milestones/M001/: M001-CONTEXT.md  M001-RESEARCH.md  M001-ROADMAP.md  MILESTONE.md  S01-SUMMARY.md  S01-litellm-setup.md  S02-concordia-trade-island.md  S03-prompt-templates.md  S04-phase0-calibration.md  S05-osf-preregistration.md
.gsd/milestones/M002/: MILESTONE.md
config/: litellm_config.yaml
data/metadata/: osf_registration.json
data/phase0/: calibration_report.md
docs/: osf_preregistration.md
docs/plans/: 2026-03-15-simulation-engine-v2-design.md
scripts/: generate_calibration_report.py  run_format_ablation.py  run_game.py  run_gm_sensitivity.py  run_phase0.py  run_rne.py  test_connectivity.py
src/analysis/: h1_self_play_premium.py  h2_mixed_effects.py  h3_identity_disclosure.py  h3_vp_ratio_ttest.py  h4_adaptation_lag.py  h5_cfim_to_multiagent.py  heatmap_generator.py
src/prompts/: __init__.py  agent_action.py  building_decision.py  gm_resolution.py  json_utils.py  reflection.py  rne_prompts.py  trade_response.py
src/simulation/: __init__.py  agent.py  config.py  game.py  gm.py  llm_router.py  logger.py  rne_game.py
tests/: test_mechanics.py  test_prompts.py  test_rne.py  test_rne_prompts.py  test_smoke.py
(+822 files in other folders)
